# TypeFlow

./: .gitignore  DESIGN.md  README.md  package.json
.omx/: metrics.json
.omx/logs/: turns-2026-04-30.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
backend/: main.py  pyproject.toml  start.py
backend/tests/: conftest.py  test_check.py  test_main.py
data/nce2/: nce2_text.md
data/nce3/: Lesson_01.txt  Lesson_02.txt  Lesson_03.txt  Lesson_04.txt  Lesson_05.txt  Lesson_06.txt  Lesson_07.txt  Lesson_08.txt  Lesson_09.txt  Lesson_10.txt  Lesson_11.txt  Lesson_12.txt  Lesson_13.txt  Lesson_14.txt  Lesson_15.txt  Lesson_16.txt  Lesson_17.txt  Lesson_18.txt  Lesson_19.txt  Lesson_20.txt  Lesson_21.txt  Lesson_22.txt  Lesson_23.txt  Lesson_24.txt  Lesson_25.txt  Lesson_26.txt  Lesson_27.txt  Lesson_28.txt  Lesson_29.txt  Lesson_30.txt  Lesson_31.txt  Lesson_32.txt  Lesson_33.txt  Lesson_34.txt  Lesson_35.txt  Lesson_36.txt  Lesson_37.txt  Lesson_38.txt  Lesson_39.txt  Lesson_40.txt  (+20 more)
docs/: office-hours-typeflow-english-typing-design.md
docs/plans/: 2026-05-01-word-by-word-input-design.md
docs/specs/: 2025-05-01-baseline-alignment-design.md  2025-05-01-fill-in-sentence-input-design.md
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FeedbackReport.tsx  FeedbackWord.tsx  InteractiveSentence.tsx  NextButton.tsx  PaperSheet.tsx  PlayButton.tsx  ProgressBar.tsx  ReplayButton.tsx  StatsBar.tsx  (+4 more)
(+112 files in other folders)
